[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/LiberationSerif-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 51
font_data = ExtResource( 1 )

[node name="MenuUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -66.5
margin_top = -39.0
margin_right = 66.5
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="ItemButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.53
anchor_right = 0.5
anchor_bottom = 0.53
margin_left = -77.0
margin_top = -39.0
margin_right = 77.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Items"

[node name="CreditsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.66
anchor_right = 0.5
anchor_bottom = 0.66
margin_left = -98.5
margin_top = -39.0
margin_right = 98.5
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Credits"

[node name="ReturnButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -93.0
margin_top = -39.0
margin_right = 93.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Return"

[node name="Text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -147.5
margin_top = -36.0
margin_right = 147.5
margin_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Overpass"
align = 1

[node name="Credits" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
margin_left = -147.5
margin_top = -36.0
margin_right = 147.5
margin_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Developer: Noora Jokela
Audio:
\"Crash.wav\" by Previsionary, licensed under CC0 1.0
\"Generic Crowd Noise\" by SoundsAreGr8 licensed under CC0 1.0
\"Completed.wav\" by Kenneth_cooney licensed under CC0 1.0
\"Level win.wav\" by Tuudurt licensed under CC0 1.0
\"Trumpet sad chromatic wah wah.wav\" by Splice Sound licensed under CC0 1.0
\"Door Handle Wood Clack.aif\" by RutgerMuller licensed under CC0 1.0
\"Technology Space Ambient\" by AleXZavesa from Pixabay"
align = 1

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ItemButton" to="." method="_on_ItemButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
